# qt5

./: CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h  MyView.cpp  MyView.h  finddialog.cpp  finddialog.h  main.cpp  mainwindow.cpp  mainwindow.h
